fix: remove z-index for Filter bar

--- a/packages/control-property-editor/src/panels/outline/OutlinePanel.scss
+++ b/packages/control-property-editor/src/panels/outline/OutlinePanel.scss
@@ -6,7 +6,7 @@
     background-color: var(--vscode-sideBar-background);
 }
 
-.tree-scroller {
+.auto-element-scroller {
     height: calc(100% - 55px);
 }
 
